src/Parser.output
Terminals unused in grammar

   SQUOTE
   DQUOTE


State 75 conflicts: 2 reduce/reduce
State 87 conflicts: 2 reduce/reduce
State 91 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce, 1 reduce/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 175 conflicts: 1 shift/reduce
State 176 conflicts: 1 shift/reduce
State 177 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 182 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Decls

    2 Decls: Decls Decl
    3      | /* empty */

    4 Decl: FuncDecl
    5     | VarDecl
    6     | TypeDecl

    7 FuncDecl: VarType IDENTIFIER LPAREN ArgList RPAREN SEMI
    8         | VarType IDENTIFIER LPAREN ArgList RPAREN FuncBody

    9 FuncBody: LBRACE Stmts RBRACE

   10 VarDecl: VarType VarList SEMI

   11 VarList: _VarList COMMA VarInit
   12        | VarInit
   13        | /* empty */

   14 _VarList: _VarList COMMA VarInit
   15         | VarInit

   16 VarInit: IDENTIFIER
   17        | IDENTIFIER ASSIGN Constant
   18        | IDENTIFIER ASSIGN Expr

   19 TypeDecl: TYPEDEF VarType IDENTIFIER SEMI

   20 VarType: _VarType
   21        | CONST _VarType

   22 _VarType: BuiltInType
   23         | STRUCT LBRACE FieldDecls RBRACE
   24         | ENUM LBRACE EnmList RBRACE
   25         | _VarType PTR
   26         | _VarType ARRAY LPAREN INTEGER RPAREN
   27         | IDENTIFIER

   28 BuiltInType: BOOL
   29            | SHORT
   30            | INT
   31            | LONG
   32            | CHAR
   33            | FLOAT
   34            | DOUBLE
   35            | VOID

   36 FieldDecls: FieldDecls FieldDecl
   37           | /* empty */

   38 FieldDecl: VarType MemList SEMI
   39          | SEMI

   40 MemList: _MemList COMMA IDENTIFIER
   41        | IDENTIFIER
   42        | /* empty */

   43 _MemList: _MemList COMMA IDENTIFIER
   44         | IDENTIFIER

   45 EnmList: _EnmList COMMA Enm
   46        | Enm
   47        | /* empty */

   48 _EnmList: _EnmList COMMA Enm
   49         | Enm

   50 Enm: IDENTIFIER
   51    | IDENTIFIER ASSIGN INTEGER

   52 ArgList: _ArgList COMMA Arg
   53        | Arg
   54        | /* empty */

   55 _ArgList: _ArgList COMMA Arg
   56         | Arg

   57 Arg: VarType IDENTIFIER
   58    | VarType

   59 Block: LBRACE Stmts RBRACE

   60 Stmts: Stmts Stmt
   61      | /* empty */

   62 Stmt: Expr SEMI
   63     | IfStmt
   64     | ForStmt
   65     | WhileStmt
   66     | DoStmt
   67     | SwitchStmt
   68     | BreakStmt
   69     | ContinueStmt
   70     | ReturnStmt
   71     | Block
   72     | VarDecl
   73     | TypeDecl
   74     | SEMI

   75 IfStmt: IF LPAREN Expr RPAREN Stmt ELSE Stmt
   76       | IF LPAREN Expr RPAREN Stmt

   77 ForStmt: FOR LPAREN Expr SEMI Expr SEMI Expr RPAREN Stmt
   78        | FOR LPAREN VarDecl Expr SEMI Expr RPAREN Stmt

   79 WhileStmt: WHILE LPAREN Expr RPAREN Stmt

   80 DoStmt: DO Stmt WHILE LPAREN Expr RPAREN

   81 SwitchStmt: SWITCH LPAREN Expr RPAREN LBRACE CaseList RBRACE

   82 CaseList: CaseList CaseStmt
   83         | /* empty */

   84 CaseStmt: CASE Expr COLON Stmts
   85         | DEFAULT COLON Stmts

   86 ContinueStmt: CONTINUE SEMI

   87 BreakStmt: BREAK SEMI

   88 ReturnStmt: RETURN SEMI
   89           | RETURN Expr SEMI

   90 Expr: Expr LBRACKET Expr RBRACKET
   91     | SIZEOF LPAREN IDENTIFIER RPAREN
   92     | SIZEOF LPAREN Expr RPAREN
   93     | SIZEOF LPAREN VarType RPAREN
   94     | IDENTIFIER LPAREN ExprList RPAREN
   95     | Expr DOT IDENTIFIER
   96     | Expr ARW IDENTIFIER
   97     | ADD Expr
   98     | SUB Expr
   99     | LPAREN VarType RPAREN Expr
  100     | DADD Expr
  101     | Expr DADD
  102     | DSUB Expr
  103     | Expr DSUB
  104     | MUL Expr
  105     | BAND Expr
  106     | NOT Expr
  107     | BNOT Expr
  108     | Expr DIV Expr
  109     | Expr MUL Expr
  110     | Expr MOD Expr
  111     | Expr ADD Expr
  112     | Expr SUB Expr
  113     | Expr SHL Expr
  114     | Expr SHR Expr
  115     | Expr GT Expr
  116     | Expr GE Expr
  117     | Expr LT Expr
  118     | Expr LE Expr
  119     | Expr EQ Expr
  120     | Expr NEQ Expr
  121     | Expr BAND Expr
  122     | Expr BXOR Expr
  123     | Expr BOR Expr
  124     | Expr AND Expr
  125     | Expr OR Expr
  126     | Expr QUES Expr COLON Expr
  127     | Expr ASSIGN Expr
  128     | Expr DIVEQ Expr
  129     | Expr MULEQ Expr
  130     | Expr MODEQ Expr
  131     | Expr ADDEQ Expr
  132     | Expr SUBEQ Expr
  133     | Expr SHLEQ Expr
  134     | Expr SHREQ Expr
  135     | Expr BANDEQ Expr
  136     | Expr BXOREQ Expr
  137     | Expr BOREQ Expr
  138     | LPAREN Expr RPAREN
  139     | IDENTIFIER
  140     | Constant

  141 ExprList: _ExprList COMMA Expr
  142         | Expr
  143         | /* empty */

  144 _ExprList: _ExprList COMMA Expr
  145          | Expr

  146 Constant: TRUE
  147         | FALSE
  148         | CHARACTER
  149         | INTEGER
  150         | REAL
  151         | STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMA (258) 11 14 40 43 45 48 52 55 141 144
DOT (259) 95
SQUOTE (260)
DQUOTE (261)
SEMI (262) 7 10 19 38 39 62 74 77 78 86 87 88 89
QUES (263) 126
COLON (264) 84 85 126
LPAREN (265) 7 8 26 75 76 77 78 79 80 81 91 92 93 94 99 138
RPAREN (266) 7 8 26 75 76 77 78 79 80 81 91 92 93 94 99 138
LBRACKET (267) 90
RBRACKET (268) 90
LBRACE (269) 9 23 24 59 81
RBRACE (270) 9 23 24 59 81
SHLEQ (271) 133
SHL (272) 113
SHREQ (273) 134
SHR (274) 114
EQ (275) 119
GE (276) 116
GT (277) 115
LE (278) 118
LT (279) 117
NEQ (280) 120
NOT (281) 106
ASSIGN (282) 17 18 51 127
AND (283) 124
BANDEQ (284) 135
BAND (285) 105 121
OR (286) 125
BOREQ (287) 137
BOR (288) 123
ARW (289) 96
BXOREQ (290) 136
BXOR (291) 122
BNOT (292) 107
DADD (293) 100 101
ADDEQ (294) 131
ADD (295) 97 111
DSUB (296) 102 103
SUBEQ (297) 132
SUB (298) 98 112
MULEQ (299) 129
MUL (300) 104 109
DIVEQ (301) 128
DIV (302) 108
MODEQ (303) 130
MOD (304) 110
STRUCT (305) 23
TYPEDEF (306) 19
CONST (307) 21
ENUM (308) 24
PTR (309) 25
ARRAY (310) 26
IF (311) 75 76
ELSE (312) 75
FOR (313) 77 78
WHILE (314) 79 80
DO (315) 80
SWITCH (316) 81
CASE (317) 84
DEFAULT (318) 85
BREAK (319) 87
CONTINUE (320) 86
RETURN (321) 88 89
SIZEOF (322) 91 92 93
TRUE (323) 146
FALSE (324) 147
BOOL (325) 28
SHORT (326) 29
INT (327) 30
LONG (328) 31
CHAR (329) 32
FLOAT (330) 33
DOUBLE (331) 34
VOID (332) 35
INTEGER (333) 26 51 149
IDENTIFIER (334) 7 8 16 17 18 19 27 40 41 43 44 50 51 57 91 94 95 96
    139
REAL (335) 150
CHARACTER (336) 148
STRING (337) 151


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
Program (84)
    on left: 1, on right: 0
Decls (85)
    on left: 2 3, on right: 1 2
Decl (86)
    on left: 4 5 6, on right: 2
FuncDecl (87)
    on left: 7 8, on right: 4
FuncBody (88)
    on left: 9, on right: 8
VarDecl (89)
    on left: 10, on right: 5 72 78
VarList (90)
    on left: 11 12 13, on right: 10
_VarList (91)
    on left: 14 15, on right: 11 14
VarInit (92)
    on left: 16 17 18, on right: 11 12 14 15
TypeDecl (93)
    on left: 19, on right: 6 73
VarType (94)
    on left: 20 21, on right: 7 8 10 19 38 57 58 93 99
_VarType (95)
    on left: 22 23 24 25 26 27, on right: 20 21 25 26
BuiltInType (96)
    on left: 28 29 30 31 32 33 34 35, on right: 22
FieldDecls (97)
    on left: 36 37, on right: 23 36
FieldDecl (98)
    on left: 38 39, on right: 36
MemList (99)
    on left: 40 41 42, on right: 38
_MemList (100)
    on left: 43 44, on right: 40 43
EnmList (101)
    on left: 45 46 47, on right: 24
_EnmList (102)
    on left: 48 49, on right: 45 48
Enm (103)
    on left: 50 51, on right: 45 46 48 49
ArgList (104)
    on left: 52 53 54, on right: 7 8
_ArgList (105)
    on left: 55 56, on right: 52 55
Arg (106)
    on left: 57 58, on right: 52 53 55 56
Block (107)
    on left: 59, on right: 71
Stmts (108)
    on left: 60 61, on right: 9 59 60 84 85
Stmt (109)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74, on right: 60 75
    76 77 78 79 80
IfStmt (110)
    on left: 75 76, on right: 63
ForStmt (111)
    on left: 77 78, on right: 64
WhileStmt (112)
    on left: 79, on right: 65
DoStmt (113)
    on left: 80, on right: 66
SwitchStmt (114)
    on left: 81, on right: 67
CaseList (115)
    on left: 82 83, on right: 81 82
CaseStmt (116)
    on left: 84 85, on right: 82
ContinueStmt (117)
    on left: 86, on right: 69
BreakStmt (118)
    on left: 87, on right: 68
ReturnStmt (119)
    on left: 88 89, on right: 70
Expr (120)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121
    122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    138 139 140, on right: 18 62 75 76 77 78 79 80 81 84 89 90 92 95
    96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112
    113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128
    129 130 131 132 133 134 135 136 137 138 141 142 144 145
ExprList (121)
    on left: 141 142 143, on right: 94
_ExprList (122)
    on left: 144 145, on right: 141 144
Constant (123)
    on left: 146 147 148 149 150 151, on right: 17 140


state 0

    0 $accept: . Program $end

    $default  reduce using rule 3 (Decls)

    Program  go to state 1
    Decls    go to state 2


state 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


state 2

    1 Program: Decls .
    2 Decls: Decls . Decl

    STRUCT      shift, and go to state 4
    TYPEDEF     shift, and go to state 5
    CONST       shift, and go to state 6
    ENUM        shift, and go to state 7
    BOOL        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    CHAR        shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    IDENTIFIER  shift, and go to state 16

    $default  reduce using rule 1 (Program)

    Decl         go to state 17
    FuncDecl     go to state 18
    VarDecl      go to state 19
    TypeDecl     go to state 20
    VarType      go to state 21
    _VarType     go to state 22
    BuiltInType  go to state 23


state 3

    0 $accept: Program $end .

    $default  accept


state 4

   23 _VarType: STRUCT . LBRACE FieldDecls RBRACE

    LBRACE  shift, and go to state 24


state 5

   19 TypeDecl: TYPEDEF . VarType IDENTIFIER SEMI

    STRUCT      shift, and go to state 4
    CONST       shift, and go to state 6
    ENUM        shift, and go to state 7
    BOOL        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    CHAR        shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    IDENTIFIER  shift, and go to state 16

    VarType      go to state 25
    _VarType     go to state 22
    BuiltInType  go to state 23


state 6

   21 VarType: CONST . _VarType

    STRUCT      shift, and go to state 4
    ENUM        shift, and go to state 7
    BOOL        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    CHAR        shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    IDENTIFIER  shift, and go to state 16

    _VarType     go to state 26
    BuiltInType  go to state 23


state 7

   24 _VarType: ENUM . LBRACE EnmList RBRACE
